--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "mysql2": "^3.6.1",
-        "sequelize": "^6.33.0"
+        "sequelize": "^6.33.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0"
     },
     "devDependencies": {
         "jest": "^29.7.0",
